--- a/.github/workflows/common.yml
+++ b/.github/workflows/common.yml
@@ -3,10 +3,23 @@ on: [push, pull_request]
 jobs:
     run-tests:
       runs-on: ubuntu-22.04
+      permissions:
+        pull-requests: write
       steps:
         - uses: actions/checkout@v5
         - uses: actions/setup-java@v5
+          name: 'Set up Java 21'
           with:
             distribution: 'temurin'
             java-version: '21'
-        - run: ./gradlew test --no-daemon
+        - name: 'Run JaCoCo Coverage'
+          run: ./gradlew testCoverage --no-daemon
+        - name: 'Create PR Comment with Coverage'
+          id: jacoco
+          uses: madrapps/jacoco-report@v1.7.2
+          with:
+            min-coverage-overall: '100'
+            min-coverage-changed-files: '100'
+            token: ${{ secrets.GITHUB_TOKEN }}
+            paths: |
+              ${{ github.workspace }}/**/build/reports/jacoco/test/jacocoTestReport.xml
